# routes/index.js
@@ -3,6 +3,7 @@ const router = require('express').Router();
 router.use('/', require('./auth'));
 
 // Collections
+router.use('/search', require('./searchRoute'));
 router.use('/autobiography', require('./autobiographyRoute')); 
 router.use('/fantasy', require('./fantasyRoute'));
 router.use('/mystery', require('./mysteryRoute'));
